--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,16 @@ body{
 #header-top{
   height: 150px;
   width: 100%;
-
   background: linear-gradient(45deg, #f0f, rgb(3, 178, 247));
+}
+
+#logo{
+
+  color: #f2f2f2;
+
+  position: absolute;
+  right: 0;
+  top: 50px;
 }
 
 #check{
@@ -36,7 +44,7 @@ body{
   width: 32px;
   height: 22px;
   position: relative;
-  top: 20px;
+  top: 50px;
   left: 15px;
   cursor: pointer;
 }
@@ -109,6 +117,7 @@ left: 0;
   position: absolute;
   z-index: 10000;
   transform: translateX(-999px);
+
   content: "";
   width: 100%;
   height: 1px;
@@ -118,5 +127,21 @@ left: 0;
 }
 
 .menu-link:hover::after{
-  transform: translateX(0);
+ transform: translateX(0);
 } 
+
+.far{
+  font-size: 4rem;
+  position: absolute;
+  top: 110px;
+  left:50%;
+  transform: rotate(15deg);
+  color: white;
+}
+
+/* -MAIN- */
+
+#main-content{
+  background: #252525;
+  height: calc(100vh - 150px);
+}
