--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 body{
   width: 100%;
   font-size: 1rem;
-  font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #container{
@@ -29,7 +29,7 @@ body{
   color: #f2f2f2;
 
   position: absolute;
-  right: 0;
+  right: 15px;
   top: 50px;
 }
 
@@ -56,7 +56,7 @@ body{
   display: block;
   background: #f2f2f2;
   border-radius: 7px;
-  z-index: 1000;
+  z-index: 6000;
   transition: .3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 #check-label span:nth-child(1){
@@ -88,11 +88,12 @@ left: 0;
 #menu{
   width: 50%;
   height: 100vh;
-  background-color: #4b4b4b9c;
+  background-color: #4b4b4b;
   position: absolute;
   left: -100%;
+  z-index: 5000;
   top: 0px;
-  padding: 100px 0 0;
+  padding: 150px 0 0;
   transition: .5s cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
@@ -105,12 +106,12 @@ left: 0;
   font-size: 1.1rem;
   color: #ebebeb;
   transition: .4s ease-in-out;
-  text-indent: 2px;
+  text-indent: 15px;
 }
 .menu-link:hover{
   font-size: 1.2rem;
   color: #a8a8a8;
-  text-indent: 15px;
+  text-indent: 30px;
 }
 
 .menu-link::after{
@@ -132,9 +133,7 @@ left: 0;
 
 .far{
   font-size: 4rem;
-  position: absolute;
-  top: 110px;
-  left:45%;
+  margin: 15px;
   transform: rotate(15deg);
   color: white;
 }
@@ -144,4 +143,5 @@ left: 0;
 #main-content{
   background: #252525;
   height: calc(100vh - 150px);
+  color: #00d4fa;
 }
