--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   margin: 0;
   text-decoration: none;
-  list-style: none;
+  outline: 0;
 }
 
 body{
@@ -30,7 +30,7 @@ body{
 
   position: absolute;
   right: 15px;
-  top: 50px;
+  top: 60px;
 }
 
 #check{
@@ -97,7 +97,9 @@ left: 0;
   transition: .5s cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
-.menu-item
+.menu-item{
+  list-style: none;
+}
 
 .menu-link{
   padding: 0  ;
@@ -144,4 +146,65 @@ left: 0;
   background: #252525;
   height: calc(100vh - 150px);
   color: #00d4fa;
+}
+
+.btn{
+  display: block;
+  z-index: 10;
+  text-transform: uppercase;
+  font-weight: bold;
+  position: relative;
+  border: 2px solid rgb(255, 255, 255);
+  background: #f2f2f200;
+  color: white;
+  width: 100px;
+  height: 30px;
+  overflow: hidden;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+.btn::after{
+  content: "";
+  width: 100%;
+  height: 0%;
+  background:linear-gradient(45deg, #f0f, rgb(3, 178, 247)) ;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: -1;
+  transform: translate(-50%, -50%) rotate(45deg);
+  transition: .3s ease-in-out;
+}
+
+.btn:hover::after{
+  height: 350%;
+}
+
+#input-tarefas{
+  color: #f2f2f2;
+  background: #f2f2f200;
+  font-size: 1rem;
+  padding-left:15px;
+  border-radius: 5px;
+  border: 2px solid #00d4fa;
+  width: 250px;
+  height: 30px
+}
+
+#input-tarefas::placeholder{
+  color: #252525;
+  text-transform: uppercase;
+
+}
+
+#tarefas{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#ol{
+  list-style:decimal;
 }
